Added "connect to other sessions". A lot of bugfixes to the js.. added the cvs.php file for storage functionality...

--- a/css/sessionwebcss.css
+++ b/css/sessionwebcss.css
@@ -44,5 +44,10 @@ text-align:left;
 color:black;
 background-color: #EFEFEF;
 font-size: 12px;
-} 
+}
+
+.secondframe
+{
+	background-color: #BCBCBC;
+}
 
