--- a/css/sessionwebcss.css
+++ b/css/sessionwebcss.css
@@ -1,9 +1,10 @@
-body {
-    background-color: #ffffff;
-	font-family: "Times New Roman";
-	font-size: 17px;
+body
+{
+	font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+	font-size:small;
+	margin:8px 10px 16px;
+	text-align:left;
 }
-
 h1 {
     color: #2e2e2e;
     text-align: left;
