Implemented #19 Add basic statistic about nbr of sessions executed, debriefed to the start page.

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -6,16 +6,19 @@ body {
 }
 
 h1 {
+    font-family:"'Comic Sans MS'";
     color: #2e2e2e;
     text-align: left;
 }
 
 h2 {
+    font-family:"'Comic Sans MS'";
     color: #2e2e2e;
     text-align: left;
 }
 
 h3 {
+    font-family:"'Comic Sans MS'";
     color: #000000;
     text-align: left;
 }
