First draft of attachment support implemented.

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -6,19 +6,19 @@ body {
 }
 
 h1 {
-    font-family:"'Comic Sans MS'";
+    font-family: "'Comic Sans MS'";
     color: #2e2e2e;
     text-align: left;
 }
 
 h2 {
-    font-family:"'Comic Sans MS'";
+    font-family: "'Comic Sans MS'";
     color: #2e2e2e;
     text-align: left;
 }
 
 h3 {
-    font-family:"'Comic Sans MS'";
+    font-family: "'Comic Sans MS'";
     color: #000000;
     text-align: left;
 }
@@ -38,6 +38,12 @@ p {
     text-align: center;
     color: black;
     background-color: red;
+}
+
+.underline {
+    color: black;
+    font-weight: bold;
+    text-decoration: underline
 }
 
 .helptext1 {
