Added upgrade script to 1.4 and updated counterstring script

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -64,3 +64,11 @@ p {
     text-decoration: underline
 }
 
+.counterstring {
+    text-decoration: none;
+}
+
+.counterstingtable {
+    WORD-BREAK:BREAK-ALL;
+    background-color: #cccccc;
+}
