First draft of notifications some bug fixes related to 1.3->1.4

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -72,3 +72,8 @@ p {
     WORD-BREAK:BREAK-ALL;
     background-color: #cccccc;
 }
+
+.notification {
+    background-color: #EFEFEF;
+    text-align: center;
+}
