Second draft of notifications... now working to add and view...

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -74,6 +74,9 @@ p {
 }
 
 .notification {
-    background-color: #EFEFEF;
     text-align: center;
+}
+
+.notification_list {
+    text-align: left;
 }
