--- a/Sessionweb-Web/css/wordcloud.css
+++ b/Sessionweb-Web/css/wordcloud.css
@@ -1,6 +1,6 @@
 body {
 	background-color:#efefef;
-	font-family:Geneva,Arial,Helvetica,sans-serif;
+	font-family:monospace;
 	margin: 0px auto;
 	max-width:900px;
 	/*border:solid;*/
