Added first draft of fetching running versions from url

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -73,6 +73,10 @@ p {
     background-color: #cccccc;
 }
 
+.boldred {
+    font-weight: bold;
+    background-color: red;
+}
 .notification {
     text-align: center;
 }
