--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -6,8 +6,7 @@ body {
     background: #d4d4d4;
 }
 
-#header
-{
+#header {
     position: relative;
     width: 1140px;
     height: 5.0em;
@@ -15,34 +14,29 @@ body {
     margin-bottom: 2px;
 }
 
-#headercontent
-{
+#headercontent {
     position: absolute;
     bottom: 0em;
     padding: 0em 2.0em 0.0em 2.0em;
 }
 
-#headercontent h1
-{
+#headercontent h1 {
     font-weight: normal;
     color: #fff;
     font-size: 2.5em;
 }
 
-#headercontent h1 sup
-{
+#headercontent h1 sup {
     color: #777;
 }
 
-#headercontent h2
-{
+#headercontent h2 {
     font-size: 1.0em;
     font-weight: normal;
     color: #aaa;
 }
 
-#menu
-{
+#menu {
     position: relative;
     width: 1140px;
     height: 1.5em;
@@ -50,19 +44,17 @@ body {
     margin-bottom: 1.5px;
 }
 
-#menu a
-{
+#menu a {
     padding: 0.1em 1.0em 0.2em 1.0em;
     color: #fff;
     text-decoration: none;
 }
 
-#menu a:hover
-{
+#menu a:hover {
     text-decoration: underline;
 }
-#menubottom
-{
+
+#menubottom {
     position: relative;
     width: 1140px;
     height: 1.0em;
@@ -70,8 +62,7 @@ body {
     margin-bottom: 2px;
 }
 
-#boldline
-{
+#boldline {
     position: relative;
     width: 1140px;
     height: 0.5em;
@@ -79,8 +70,7 @@ body {
     margin-bottom: 2px;
 }
 
-#shortboldline
-{
+#shortboldline {
     position: relative;
     width: 1024px;
     height: 0.5em;
@@ -88,8 +78,7 @@ body {
     margin-bottom: 2px;
 }
 
-#shortthinline
-{
+#shortthinline {
     position: relative;
     width: 1024px;
     height: 0.1em;
@@ -161,7 +150,7 @@ p {
 }
 
 .counterstingtable {
-    WORD-BREAK:BREAK-ALL;
+    WORD-BREAK: BREAK-ALL;
     background-color: #cccccc;
 }
 
@@ -169,6 +158,7 @@ p {
     font-weight: bold;
     background-color: red;
 }
+
 .notification {
     text-align: center;
 }
@@ -181,8 +171,7 @@ p {
     text-decoration: none;
 }
 
-#outer
-{
+#outer {
     z-index: 2;
     position: relative;
     /*
@@ -196,8 +185,7 @@ p {
     margin: 0 auto;
 }
 
-#footer
-{
+#footer {
     position: relative;
     width: 1140px;
     height: 1.5em;
@@ -205,14 +193,35 @@ p {
     margin-bottom: 2px;
 }
 
-#footer a
-{
+#footer a {
     padding: 0.1em 1.0em 0.2em 1.0em;
     color: #000000;
     text-decoration: none;
 }
 
-#footer a:hover
-{
+#footer a:hover {
     text-decoration: underline;
+}
+
+.graybox {
+    background-color: #efefef;
+    width: 1024px;
+    height: 100%;
+    background-color: rgb(239, 239, 239);
+}
+
+.grayboxtext
+{
+    margin-left: 0.5em;
+}
+
+.larger
+{
+    font-weight: bolder;
+    font-size: larger;
+}
+
+.stronger
+{
+    font-weight: bolder;
 }
