Updated list2.php with more functionality...

--- a/Sessionweb-Web/css/flexigrid.css
+++ b/Sessionweb-Web/css/flexigrid.css
@@ -62,6 +62,9 @@
 .reasign {
     background: url(images/user.gif) no-repeat center left;
 }
+.search {
+    background: url(images/search.png) no-repeat center left;
+}
 
 
 
