Added fulltext search to list2.php, have to manulay add the alter table  (addFullTextSearch.sql) some design work on sprintreport.php

--- a/Sessionweb-Web/css/flexigrid.css
+++ b/Sessionweb-Web/css/flexigrid.css
@@ -65,6 +65,10 @@
 .search {
     background: url(images/search.png) no-repeat center left;
 }
+.filter {
+    background: url(images/filter.png) no-repeat center left;
+}
+
 
 
 
