Candidate implementation of list2.php

--- a/Sessionweb-Web/css/flexigrid.css
+++ b/Sessionweb-Web/css/flexigrid.css
@@ -68,6 +68,9 @@
 .filter {
     background: url(images/filter.png) no-repeat center left;
 }
+.view {
+    background: url(images/debrief.png) no-repeat center left;
+}
 
 
 
