--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -100,6 +100,10 @@ h2 {
     text-align: left;
 }
 
+.popup_save {
+    text-align: center;
+}
+
 h3 {
     font-family: "'Comic Sans MS'";
     color: #000000;
