--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -70,7 +70,7 @@ body {
     margin-bottom: 2px;
 }
 
-#shortboldline {
+.shortboldline {
     position: relative;
     width: 1024px;
     height: 0.5em;
@@ -79,7 +79,7 @@ body {
 }
 
 
-#shortthinline {
+.shortthinline {
     position: relative;
     width: 1024px;
     height: 0.1em;
