Bug fixes for action menu when viewing session

--- a/Sessionweb-Web/css/flexigrid.css
+++ b/Sessionweb-Web/css/flexigrid.css
@@ -69,7 +69,7 @@
     background: url(images/filter.png) no-repeat center left;
 }
 .view {
-    background: url(images/debrief.png) no-repeat center left;
+    background: url(images/edit-single-small.png) no-repeat center left;
 }
 
 
