Added more debug logs to file upload and delete
Added first draft of new settings page (settings2.php)

Added a lot of APIs to use in the new settings page

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -241,6 +241,21 @@ p {
     height: 3.5em;
 }
 
+.divider_settings {
+    position: relative;
+    width: 790px;
+    height: 0.1em;
+    background: #808500 repeat-x;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.divider_settings_noline {
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 /*
 #select_area
 {
