--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -78,7 +78,6 @@ body {
     margin-bottom: 2px;
 }
 
-
 .shortthinline {
     position: relative;
     width: 1024px;
@@ -86,7 +85,6 @@ body {
     background: #808500 repeat-x;
     margin-bottom: 2px;
 }
-
 
 h1 {
     font-family: "'Comic Sans MS'";
@@ -216,24 +214,20 @@ p {
     background-color: rgb(239, 239, 239);
 }
 
-.grayboxtext
-{
+.grayboxtext {
     margin-left: 0.5em;
 }
 
-.larger
-{
+.larger {
     font-weight: bolder;
     font-size: larger;
 }
 
-.stronger
-{
+.stronger {
     font-weight: bolder;
 }
 
-#searchbaricon
-{
+#searchbaricon {
     background-image: url("../pictures/searchbaricon.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -259,11 +253,19 @@ p {
 .log_div {
     position: relative;
     width: 300px;
-
+    padding: 0.1em 1.0em 0.2em 1.0em;
     background: #808500 repeat-x;
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+.settings_submit {
+    background-color: #808500;
+    font-weight: 500;
+    padding: 0.1em 1.0em 0.2em 1.0em;
+
+}
+
 
 /*
 #select_area
