Added possibility to add a file (include/developmentversion.txt) to change the header of sw to make it easier to spot it as development version and not production version.

--- a/Sessionweb-Web/css/sessionwebcss.css
+++ b/Sessionweb-Web/css/sessionwebcss.css
@@ -266,9 +266,8 @@ p {
 
 }
 
-
-/*
-#select_area
-{
-    width: 500px;
-}*/
+.development{
+    border-style: dashed;
+    border-width: 5px 5px 5px 5px;
+    border-color: #00ff17;
+}
