[issue 120] Improved ad login, it is now ready for beta test. statistic work.. correct db layouts [issue 119]Added delete user from settings updated js datatable to latest version

--- a/Sessionweb-Web/js/DataTables/css/demo_page.css
+++ b/Sessionweb-Web/js/DataTables/css/demo_page.css
@@ -105,3 +105,10 @@
 	width: 100%;
 	overflow: auto;
 }
+
+.paging_full_numbers .ui-button {
+    padding: 2px 6px;
+    margin: 0;
+    cursor: pointer;
+    * cursor: hand;
+}
