[issue 176] Add reload button on list page [issue 177] change debrief comment icon from start to text icon [issue 176] Application report and Area grid report have a js error preventing it from displaying one of the graphs

--- a/web/css/flexigrid.css
+++ b/web/css/flexigrid.css
@@ -71,12 +71,9 @@
 .view {
     background: url(images/edit-single-small.png) no-repeat center left;
 }
-
-
-
-
-
-
+.reload {
+    background: url(images/reload-small.png) no-repeat center left;
+}
 
 
 /* CSS Document */
@@ -552,9 +549,11 @@ div.colCopy {
 
 .flexigrid div.bDiv tr:hover td,.flexigrid div.bDiv tr:hover td.sorted,.flexigrid div.bDiv tr.trOver td.sorted,.flexigrid div.bDiv tr.trOver td
 	{
-	background: #d9ebf5;
-	border-left: 1px solid #eef8ff;
-	border-bottom: 1px dotted #a8d8eb;
+	background: #ffffff;
+	/*border-left: 1px solid #000000;*/
+	/*border-right: 1px solid #000000;*/
+	border-bottom: 1px solid #000000;
+	border-top:  1px solid #000000;
 }
 
 .flexigrid div.bDiv tr.trSelected:hover td,.flexigrid div.bDiv tr.trSelected:hover td.sorted,.flexigrid div.bDiv tr.trOver.trSelected td.sorted,.flexigrid div.bDiv tr.trOver.trSelected td,.flexigrid tr.trSelected td.sorted,.flexigrid tr.trSelected td
